[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Scenes/04_Splitscreen_Multiplayer/PlayerN.gd" type="Script" id=2]
[ext_resource path="res://Scenes/04_Splitscreen_Multiplayer/CameraMan.gd" type="Script" id=3]
[ext_resource path="res://Scenes/04_Splitscreen_Multiplayer/SplitMultiPlayCamera.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 64 )

[node name="CameraMan" type="Node"]
script = ExtResource( 3 )

[node name="ViewportHBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 38.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportContainer1" type="ViewportContainer" parent="ViewportHBoxContainer"]
margin_right = 529.0
margin_bottom = 600.0
size_flags_horizontal = 3
stretch = true

[node name="Viewport" type="Viewport" parent="ViewportHBoxContainer/ViewportContainer1"]
size = Vector2( 529, 600 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="ViewportHBoxContainer/ViewportContainer1/Viewport"]
drag_margin_h_enabled = true
drag_margin_v_enabled = true
script = ExtResource( 4 )

[node name="World" type="Node" parent="ViewportHBoxContainer/ViewportContainer1/Viewport"]

[node name="Player1" type="KinematicBody2D" parent="ViewportHBoxContainer/ViewportContainer1/Viewport/World"]
position = Vector2( 239.905, 269.943 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
id = 1

[node name="Sprite" type="Sprite" parent="ViewportHBoxContainer/ViewportContainer1/Viewport/World/Player1"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ViewportHBoxContainer/ViewportContainer1/Viewport/World/Player1"]
shape = SubResource( 1 )

[node name="Player2" type="KinematicBody2D" parent="ViewportHBoxContainer/ViewportContainer1/Viewport/World"]
position = Vector2( 477.066, 269.943 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
id = 2

[node name="Sprite" type="Sprite" parent="ViewportHBoxContainer/ViewportContainer1/Viewport/World/Player2"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ViewportHBoxContainer/ViewportContainer1/Viewport/World/Player2"]
shape = SubResource( 1 )

[node name="ViewportContainer2" type="ViewportContainer" parent="ViewportHBoxContainer"]
margin_left = 533.0
margin_right = 1062.0
margin_bottom = 600.0
size_flags_horizontal = 3
stretch = true

[node name="Viewport" type="Viewport" parent="ViewportHBoxContainer/ViewportContainer2"]
size = Vector2( 529, 600 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="ViewportHBoxContainer/ViewportContainer2/Viewport"]
script = ExtResource( 4 )

[node name="Minimap" type="ViewportContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -170.0
margin_top = -200.0
margin_right = 170.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="Minimap"]
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="Minimap/Viewport"]
current = true
zoom = Vector2( 9, 9 )
